# minivllm

./: example.py  pyproject.toml
src/: config.py  sampling_params.py
src/engine/: llm_engine.py  model_runner.py  scheduler.py  sequence.py
src/layers/: activation.py  attention.py  embedding_head.py  layernorm.py  linear.py
src/utils/: context.py
