[project]
name = "minivllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "dataclasses>=0.8",
  "numpy>=2.4.6",
  "torch>=2.12.0",
  "torch-vision>=0.1.6.dev0",
  "transformers>=5.13.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["minivllm*"]
